objects/Google_Access_Information__c.object
<CustomObject>
    <fields>
        <fullName>Access_Token__c</fullName>
        <label>Access Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Email</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Expires_In__c</fullName>
        <label>Expires In</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Next_Expiry_DateTime__c</fullName>
        <label>Next Expiry DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RefreshToken__c</fullName>
        <label>RefreshToken</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Google_Access_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Google Access Information</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Google Access Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Google Access Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>